cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_73.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:34: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:34:17: Write of unused value
32.               if (n == 0) {
33.                   c2l(iv, v0);
34.                   c2l(iv, v1);
                      ^
35.   
36.                   ti[0] = v0;
